# filemerger

./: .gitignore  README.md  filemerger.ps1  filemerger.sh  install.ps1  install.sh  pyproject.toml  setup.py
src/filemerger/: merge_files.py
